--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "yeoman-generator"
   ],
   "dependencies": {
-    "yeoman-generator": "^0.18.0",
     "chalk": "^0.5.0",
-    "yosay": "^0.3.0",
-    "js-yaml": "^3.2.3"
+    "fs-extra": "^0.22.1",
+    "js-yaml": "^3.2.3",
+    "rimraf": "^2.4.2",
+    "yeoman-generator": "^0.18.0",
+    "yosay": "^0.3.0"
   },
   "peerDependencies": {
     "yo": ">=1.0.0"
